# JetSpec

./: .gitignore  CITATION.bib  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: a6_proxy_offline.py  benchmark.py  build_depth_rank_profile.py  collect_profile.py  draft_head_micro.py  gpu_idle.py  hf_fa2_kv_decode.py  identical_fork_compare.py  prompt_overhead.py  reseed_probe.py  round_profile.py  tps_walltime.py  tree_diag.py  verify_kernel_profile.py
bench/debug/: reseed_probe.py  tree_diag.py
bench/engine/: identical_fork_compare.py  tps_walltime.py
bench/profiling/: collect_depth_rank_stats.py  collect_profile.py  collect_tree_diagnostics.py  compare_conditioned_draft_logits.py  compare_engine_with_vllm_integration.py  depth_rank_profile.py  round_profile.py  verify_kernel_profile.py
bench/reference/: benchmark.py  dflash_baseline.py  hf_fa2_decode_baseline.py  hf_fa2_kv_decode.py
examples/: jetflow_kernel_throughput.py  nano_kernel_throughput.py  simple_generate.py  tree_algo_sweep.py  tree_spec_generate.py
examples/basic/: simple_generate.py
examples/engine/: jetflow_engine_throughput.py  jetspec_engine_generate.py  jetspec_engine_throughput.py
examples/tree/: jetspec_tree_algo_sweep.py  jetspec_tree_generate.py  (+2 more)
jetflow/: __init__.py  draft.py  draft_head_drafter.py
jetspec/: __init__.py  draft_head_adapter.py
optimus_cutedsl/: LICENSE  NOTICE  __init__.py  _cutlass_monkeypatch.py  group_quant_fp8.py  group_quant_fp8_masked.py  qknorm_rope.py  reduce.py  rmsnorm.py  silu_mul_group_masked_v2.py  silu_mul_group_quant_fp8_masked.py  silu_mul_group_quant_fp8_masked_v2.py  symmetric_dense_gemm_sm90.py  tile_scheduler.py  utils.py
ptd/: __init__.py  draft.py  draft_head_drafter.py
tests/: test_build_depth_rank_profile.py  test_build_from_topk.py  test_chain_lossless.py  test_compiled_draft_head.py  test_compiled_verify_lossless.py  test_compiled_verify_stack_fused_gemms.py  test_depth_rank_histogram.py  test_device_commit_eos_parity.py  test_draft_head_drafter.py  test_draft_head_kv_cache.py  test_draft_head_lossless.py  test_engine_parity.py  test_gpu_tree_accept.py  test_jetflow_attn_metadata.py  test_jetflow_batch.py  test_jetflow_engine.py  test_jetflow_kernel.py  test_jetflow_kernel_e2e.py  test_jetflow_paged_multiseq.py  test_jetflow_tree.py  test_jetflow_tree_batch.py  test_l3_staging.py  test_linearize.py  test_linearize_kernel_meta.py  test_linearize_verify.py  test_logical_kv_cache.py  test_logical_kv_engine.py  test_logical_kv_kernel.py  test_nano_attn_metadata.py  test_nano_batch.py  test_nano_engine.py  test_nano_kernel.py  test_nano_kernel_e2e.py  test_nano_paged_multiseq.py  test_nano_tree.py  test_nano_tree_batch.py  test_offline_generate.py  test_paged_tree_attn_customop.py  test_reseed_probe.py  test_top2gap_annealed.py  (+7 more)
(+238 files in other folders)
