[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-tree-decoding"
version = "0.0.1"
description = "PTD — lightweight offline tree-speculative decoding on top of HF transformers (Qwen3-8B)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "transformers>=4.51,<5",   # Qwen3 from 4.51+; validated on 4.57.1 (b200 aaron-specforge)
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Opt-in: the vendored optimus_cutedsl tail-tree attention kernel (Hopper / SM90
# only). `pip install -e .` never pulls these; only `pip install -e '.[optimus]'`.
optimus = [
    "nvidia-cutlass-dsl==4.3.0.dev0",   # validated importable on b200 aaron-specforge
    "cuda-python>=12.8",
    "einops",
    "triton",                            # imported by gemm_ar; undeclared upstream
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ptd*", "optimus_cutedsl*"]

[tool.setuptools.package-data]
"optimus_cutedsl" = ["LICENSE", "NOTICE", "**/*.md", "flash_attn/pyproject.toml"]
