[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-tree-decoding"
version = "0.0.1"
description = "PTD — lightweight offline tree-speculative decoding on top of HF transformers (Qwen3-8B)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "transformers>=4.51,<5",   # Qwen3 from 4.51+; validated on 4.57.1
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
kernel = ["triton"]
bench = [
    "datasets",
    "psutil",
    "ninja",
    "packaging",
]
flash-attn = [
    "flash-attn",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["psutil", "packaging", "ninja"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ptd*"]
